swiched to gradle 3.3; cleaned up build script; enabled composite build